--- a/jmstest/pom.xml
+++ b/jmstest/pom.xml
@@ -14,5 +14,15 @@
   		<artifactId>activemq-all</artifactId>
   		<version>5.8.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.activemq</groupId>
+  		<artifactId>activemq-pool</artifactId>
+  		<version>5.8.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.activemq</groupId>
+  		<artifactId>activemq-camel</artifactId>
+  		<version>5.8.0</version>
+  	</dependency>
   </dependencies>
 </project>
