--- a/jmstest/pom.xml
+++ b/jmstest/pom.xml
@@ -20,9 +20,9 @@
   		<version>5.8.0</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.apache.activemq</groupId>
-  		<artifactId>activemq-camel</artifactId>
-  		<version>5.8.0</version>
+  		<groupId>org.springframework.amqp</groupId>
+  		<artifactId>spring-amqp</artifactId>
+  		<version>1.2.0.RELEASE</version>
   	</dependency>
   </dependencies>
 </project>
